[package]
name = "hexed"
version = "0.2.0"
authors = ["Adolfo H. Wernke <adolfohw@gmail.com>"]
edition = "2018"
description = "A Rusty hexdump"
repository = "https://github.com/adolfohw/hexed"
readme = "README.md"
keywords = ["hexdump", "hex"]
categories = ["command-line-interface", "command-line-utilities", "development-tools", "visualization"]
license = "MIT"

[profile.release]
opt-level = 3
debug = 0
lto = "fat"
panic = "abort"
codegen-units = 1

[dependencies]
crossterm = "0.17"
ctrlc = "3.1"

[dependencies.structopt]
version = "0.3"
default-features = false
features = ["suggestions", "wrap_help"]
